...
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_details" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/favoriteFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:backgroundTint="#fbfbfb"
        app:borderWidth="0dp"
        app:layout_anchor="@id/app_bar"
...
